Kubernetes_study_folder/[EKS]jenkins_argo/k8s-manifests/jenkins/example_external.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-external
  namespace: default #ingress가 있는 네임스페이스
spec:
  type: ExternalName
  externalName: jenkins.jenkins.svc.cluster.local
