Kubernetes_study_folder/[EKS]jenkins_argo/k8s-manifests/jenkins/ingress_jenkins_argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-ingress
  namespace: jenkins
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-manage
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
      - path: /argo
        pathType: Prefix
        backend:
          service:
            name: argo-external
            port:
              number: 80
